--- a/main.scss
+++ b/main.scss
@@ -170,7 +170,7 @@ html, body {
 
 .restcards {
     margin: 0;
-    padding: 1em;
+    padding: 1em 1em 2.5em 1em;
     &__card {
         border-radius: 1em;
         margin-bottom: 1.2em;
@@ -254,13 +254,15 @@ html, body {
 
 .footer {
     color: white;
-    background-color: #3f3f3f;
+    background-color: #383838;
     margin: 0;
     padding: 1em;
+    line-height: 0.5em;
     &__label {
         @include title-font;
         letter-spacing: 1px;
         font-weight: 400;
+        padding-bottom: 0.75em;
     }
     &__context {
         @include text-font;
